syntax = "proto3";

package calculator;

option go_package = "github.com/hiosi123/gRPC/calculator/proto";

message SumRequest {
    int32 first_number = 1;
    int32 second_numer = 2;
}

message SumResponse {
    int32 result = 1;
}